--- a/07.19/naver/audio.html
+++ b/07.19/naver/audio.html
@@ -35,5 +35,142 @@
 			</nav>
 		</div>
 	</header>
+        <!-- main -->
+    <main id="audio_main" role="main">
+        <div class="audio_container audio_flex_between">
+            <div class="audio_main_left">
+
+                <!-- audio_today -->
+                <div id="audio_today" class="audio_section">
+                    <div class="audio_header">
+                        <h2>오늘의 오디오클립</h2>
+                    </div>
+                    <div class="audio_body">
+                        <div class="audio_slide_wrap">
+                            <div class="audio_slide audio_flex_between">
+                                <div class="audio_slide_img"></div>
+                                <div class="text_wrap">
+                                    <h3>
+                                        <매그넘 인 파리-부산> 전시회
+                                    </h3>
+                                    <p>오디오로 감상해보세요!</p>
+                                </div>
+                                <button type="button" class="btn btn_left"></button>
+                                <button type="button" class="btn btn_right"></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- audio_original -->
+                <div id="audio_original" class="audio_section">
+                    <div class="audio_header">
+                        <h2>오디오클립 추천 오리지널></h2>
+                    </div>
+                    <div class="audio_body">
+                        <ul class="audio_flex_between">
+                            <li>
+                                <a href="#">
+                                    <div class="audio_original_img"></div>
+                                    <h3>하지현의 하트:마음 이야기</h3>
+                                    <span class="author">하지현의 하트</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="audio_original_img"></div>
+                                    <h3>클래식매니저</h3>
+                                    <span class="author">아티스츠카드</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="audio_original_img"></div>
+                                    <h3>빠숑의 부동산 핵심노트</h3>
+                                    <span class="author">스마트튜브</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="audio_original_img"></div>
+                                    <h3>썬킴의 세계사 완전정복</h3>
+                                    <span class="author">모모콘</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="audio_original_img"></div>
+                                    <h3>김영훈 아카데미</h3>
+                                    <span class="author">김영훈</span>
+                                </a>
+                            </li>
+                        </ul>
+                        <button type="button" class="btn btn_right"></button>
+                    </div>
+                </div>
+
+                <!-- audio_playlist -->
+                <div id="audio_playlist" class="audio_section">
+                    <div class="audio_header">
+                        <h2>나를 위한 플레이리스트</h2>
+                        <p>당신을 위해 매일 새롭게 업데이트 됩니다.</p>
+                        <a href="#" class="link_total">전체보기</a>
+                    </div>
+                    <div class="audio_body">
+                        <ul class="audio_flex_between">
+                            <li>
+                                <a href="#">
+                                    <div class="image_wrap">
+                                        <div class="playlist_img"></div>
+                                        <i class="icon_play"></i>
+                                    </div>
+                                    <div class="text_wrap">
+                                        <h3>이번주 베스트 추천</h3>
+                                    </div>
+                                </a>
+                            </li> 
+                            <li>
+                                <a href="#">
+                                    <div class="image_wrap">
+                                        <div class="playlist_img"></div>
+                                        <i class="icon_play"></i>
+                                    </div>
+                                    <div class="text_wrap">
+                                        <h3>이번주 베스트 추천</h3>
+                                    </div>
+                                </a>
+                            </li> 
+                            <li>
+                                <a href="#">
+                                    <div class="image_wrap">
+                                        <div class="playlist_img"></div>
+                                        <i class="icon_play"></i>
+                                    </div>
+                                    <div class="text_wrap">
+                                        <h3>이번주 베스트 추천</h3>
+                                    </div>
+                                </a>
+                            </li> 
+                            <li>
+                                <a href="#">
+                                    <div class="image_wrap">
+                                        <div class="playlist_img"></div>
+                                        <i class="icon_play"></i>
+                                    </div>
+                                    <div class="text_wrap">
+                                        <h3>이번주 베스트 추천</h3>
+                                    </div>
+                                </a>
+                            </li> 
+                        </ul>
+                        <button type="button" class="btn btn_right"></button>
+                    </div>
+                </div>
+            </div>
+            <div class="audio_main_right">
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
